# dbrepos

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publishing.yml  test-ci.yml
docs/: conf.py  index.rst  requirements.txt
docs/source/: dbrepos.core.rst  dbrepos.django.rst  dbrepos.rst  dbrepos.sqlalchemy.rst  modules.rst  repo.core.rst  repo.django.rst  repo.rst  repo.sqlalchemy.rst  repository.core.rst  repository.django.rst  repository.rst  repository.sqlalchemy.rst
repo/: decorators.py  shortcuts.py
repo/core/: abstract.py  types.py
repo/django/: filters.py  repo.py
repo/sqlalchemy/: filters.py  repo.py
repository/: decorators.py  shortcuts.py
repository/core/: abstract.py
repository/django/: filters.py  repo.py
repository/sqlalchemy/: filters.py  repo.py
tests/: conftest.py  entities.py  parametrize.py  sqlalchemy.py
tests/django/config/: settings.py
tests/django/tables/: apps.py  models.py
tests/django/tables/migrations/: 0001_initial.py
tests/fixtures/: django.py  sqlalchemy.py
tests/integration/: conftest.py  test_all.py  test_all_by_field.py  test_all_by_filters.py  test_all_by_pks.py  test_count_by_field.py  test_count_by_filters.py  test_create.py  test_delete.py  test_delete_by_field.py  test_exists_by_field.py  test_exists_by_filters.py  test_get_by_field.py  test_get_by_filters.py  test_get_by_pk.py  test_multi_update.py  test_params.py  test_update.py
tests/integration/fixtures/: django.py  sqlalchemy.py
tests/unit/: conftest.py  test_decorators.py  test_docs.py  test_filters.py  test_filterseqs.py  test_init.py  test_shortcuts.py
